优化windows 窗口样式设计